추가-유저 모델, 폼 다듬기, 각 템플릿 기본적인 기능 구현

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -16,17 +16,23 @@
             <input type="submit" class="btn btn-orange w-100 fs-3 mt-5" value="로그인">
         </form>
         <div class="w-100 text-center mt-5">
+
+
+          {% comment %} 소셜 로그인 부분입니다. {% endcomment %}
+          
             {% load socialaccount %}
 
                 <a href="{% provider_login_url 'kakao' method='oauth2' %}">
                 카카오톡 회원가입
                 </a>
                 <a href="{% provider_login_url 'google' method='oauth2' %}">
-                    <img src="https://t1.daumcdn.net/cfile/tistory/998689465C3D7D1217" style="width: 20rem;">
+                    구글 회원가입
                 </a>
                 <a href="{% provider_login_url 'naver' method='oauth2' %}">
-                    <img src="https://t1.daumcdn.net/cfile/tistory/998689465C3D7D1217" style="width: 20rem;">
+                    네이버 회원가입
                 </a>
+
+                
         </div>
       </div>
     </div>
