--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    프로필입니다.
+  {{ person.username }}님의 프로필 페이지
+  <a href="{% url 'accounts:update' %}">내 정보 수정</a>
+  
 {% endblock content %}
