--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -7,11 +7,10 @@
         <form action="{% url 'accounts:signup' %}" method="POST" class="form-text" enctype = 'multipart/form-data'>
           {% csrf_token %}
           {% for field in form %}
-            <label for="{{ field.auto_id }}" class="ms-2">{{ field.label }}</label>
+          <div class="mb-3">
+            <label for="{{ field.label }}">{{ field.label }}</label>
             {{ field }}
-            {% if field.errors %}
-              <span>{{ field.errors }}</span>
-            {% endif %}
+          </div>
           {% endfor %}
           <input type="submit" class="btn btn-orange w-100 mt-5 fs-3" value="회원가입">
         </form>
