--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -7,11 +7,10 @@
       <form action="{% url 'accounts:update' %}" method="POST" class="form-text" enctype="multipart/form-data">
         {% csrf_token %}
         {% for field in form %}
-          <label for="{{ field.auto_id }}" class="ms-2">{{ field.label }}</label>
-          {{ field }}
-          {% if field.errors %}
-            <span>{{ field.errors }}</span>
-          {% endif %}
+          <div class="mb-3">
+            <label for="{{ field.label }}" class="ms-2">{{ field.label }}</label>
+            {{ field }}
+          </div>
         {% endfor %}
         <input type="submit" class="btn btn-orange w-100 mt-5 mb-3 fs-3" value="정보수정">
         <a href="{% url 'accounts:change_password' %}" class="btn btn-orange w-100 fs-3">비밀번호 변경</a>
