--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,43 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>title</title>
+    <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- bootstrap_icon css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <style>
+    </style>
     {% block style %}
     {% endblock style %}
   </head>
   <body>
-    {% block content %}
-    {% endblock content %}
+    <nav>
+      {% include 'nav.html' %}
+    </nav>
 
-    {% block javascript %}
-    {% endblock javascript %}
+    <main class="container">
+      <div class="content--wrapper">
+        <div class="content">
+          {% block content %}
+          {% endblock content %}
+        </div>
+      </div>
+    </main>
+    
+    <footer class="footer_container">
+      {% include 'footer.html' %}
+    </footer>
+    <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script>
+      
+    </script>
+    {% block script %}
+    {% endblock script %}
   </body>
-</html>
+  </html>
