--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,31 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block style %}
-<style>
-  .social--btn_google {
-    text-decoration: none;
-    font-weight: bold;
-    display: flex;
-    text-align: left;
-    align-items: center;
-    font-size: 20px;
-    border : solid 1px #e0e0e0;
-  }
-
-  .social--btn_naver {
-    text-decoration: none;
-    font-weight: bold;
-    display: flex;
-    text-align: left;
-    align-items: center;
-    font-size: 20px;
-    background: rgb(3, 199, 90);
-    border : 0px;
-    height: 72px;
-    color: white;
-  }
-</style>
-{% endblock style %}
+{% block link %}
+  <link rel="stylesheet" href="{% static 'css/accounts_sociallogin.css' %}">
+{% endblock link %}
 {% block content %}
 <div class="container-fluid mt-5">
     <div class="container-fluid d-flex justify-content-center mt-5">
@@ -47,6 +24,7 @@
           <a href="{% provider_login_url 'kakao' method='oauth2' %}">
             <img src="{% static 'image/kakao_login.png' %}" alt="kakao"  class="w-100">
           </a>
+
           <a href="{% provider_login_url 'google' method='oauth2' %}">
             <button type='button'class="btn btn-link w-100 social--btn_google container mt-3 p-0">
               <div class='col-5'>
@@ -57,6 +35,7 @@
               </div>
             </button>
           </a>
+
           <a href="{% provider_login_url 'naver' method='oauth2' %}">
             <button type='button'class="w-100 social--btn_naver container mt-3 rounded">
               <div class='col-5'>
@@ -66,7 +45,8 @@
                 네이버  로그인
               </div>
             </button>
-          </a>          
+          </a> 
+                   
         </div>
       </div>
     </div>
