--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -2,5 +2,95 @@
 
 {% block content %}
 <p>products</p>
-
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
+<p>products</p>
 {% endblock content %}
