--- a/templates/base.html
+++ b/templates/base.html
@@ -22,13 +22,13 @@
       {% include 'nav.html' %}
     </nav>
 
-    <main class="container">
+    <main class="container" style='padding-top: 60px;'>
       <div class="content--wrapper">
-        <div class="content">
+        <div class="content"> 
           {% block content %}
           {% endblock content %}
         </div>
-      </div>
+      </div> 
     </main>
     
     <footer class="footer_container">
