--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,7 +11,7 @@
   <div class="col-3">
     <ul>
       <li>김용진</li>
-      <li>이정윤</li>
+      <li>이정일</li>
       <li>진홍엽</li>
       <li>최지원</li>
       <li>하성범</li>
