--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container-fluid mt-5">
-    <div class="container mt-5" style="width: 500px;">
+<div class="container-fluid">
+    <div class="container" style="width: 500px;">
       <h1 class="fw-bold text-center">비밀번호 변경</h1>
       <form action="{% url 'accounts:change_password' %}" method="POST" class="form-text" enctype="multipart/form-data">
         {% csrf_token %}
