--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
       {% include 'nav.html' %}
     </nav>
 
-    <main class="container" style='padding-top: 60px;'>
+    <main class="container">
       <div class="content--wrapper">
         <div class="content"> 
           {% block content %}
