--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -4,8 +4,8 @@
   <link rel="stylesheet" href="{% static 'css/accounts_sociallogin.css' %}">
 {% endblock link %}
 {% block content %}
-<div class="container-fluid mt-5">
-    <div class="container-fluid d-flex justify-content-center mt-5">
+<div class="container-fluid">
+    <div class="container-fluid d-flex justify-content-center">
       <div class="container" style="width: 500px;">
         <h1 class='text-center fw-bold'>로그인</h1>
         <form action="{% url 'accounts:login' %}" method="POST" class="form-text">
