--- a/recipes/templates/recipes/index.html
+++ b/recipes/templates/recipes/index.html
@@ -2,9 +2,12 @@
 {% block content %}
 <h1>레시피 리스트</h1>
 {% for recipe in recipes %}
-  <a href="{% url 'recipes:detail' recipe.pk %}">
-    {{ recipe.title }}
-  </a>
+  <p>
+    <a href="{% url 'recipes:detail' recipe.pk %}">
+      <img src="{{ recipe.thumbnail.url }}" alt="썸네일">
+      {{ recipe.title }}
+    </a>
+  </p>
 {% empty %}
   <p>아직 레시피가 없어요.</p>
 {% endfor %}
