추가_products_index_forms_수정_base_footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
     </nav>
 
     <main class="container">
-      <div class="content--wrapper">
-        <div class="content"> 
+      <div class="content--wrapper" >
+        <div class="content" id="wrapper"> 
           {% block content %}
           {% endblock content %}
         </div>
