--- a/products/templates/products/create.html
+++ b/products/templates/products/create.html
@@ -1,17 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>create</h1>
-  <form action="{% url 'products:create' %}" method = 'POST' enctype="multipart/form-data">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit">
-  </form>
-</body>
-</html>
+{% extends "base.html" %}
+{% block style %}
+<style>
+  .button--color {
+    background-color: var(--main-color);
+    color: white;
+    padding: 10px;
+    border: solid 1px var(--main-color);
+  }
+</style>
+{% endblock style %}
+
+{% block content  %}
+<h1>create</h1>
+<form action="{% url 'products:create' %}" method = 'POST' enctype="multipart/form-data">
+  {% csrf_token %}
+  {{form.as_p}}
+  <button type="submit" class='button--color w-100'>등록</button> 
+</form>
+{% endblock content %}
