--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -1,96 +1,116 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block link %}
+<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+{% endblock link %}
+{% block style %}
+<link rel="stylesheet" href="{% static 'css/products_index.css' %}">
+{% endblock style %}
 
 {% block content %}
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
-<p>products</p>
+<div class='container main--padding'>
+  <div class='mt-3'> 
+    <a href="{% url 'products:create' %}" class='button--color p-3 rounded'>
+      <i class="bi bi-cloud-plus me-2 ms-1"></i>
+      새 상품 등록하러 가기
+      </a>
+  </div>
+  <p class='title--content--2'>신상품</p>
+    <div class='owl-carousel new_owl-carousel owl-theme' >
+      {% for product in new_products %}
+      <div class='card--border'>
+        <a href="{% url 'products:detail' product.pk %}">
+          <img src="{{product.photo.url}}" class='rounded' style='width: 170px; height: 170px;' alt="img">  
+          <div class='card--name--box'>
+            <strong class='card--name'>{{product.name}}</strong>
+          </div>
+          <div class='card--tag--border'>
+            <p><i class="bi bi-star-fill card--rating__color"></i>{{product.hits}}</p>
+            <p>리뷰 {{product.review_set.count}}</p>
+          </div>
+          <div>
+            <p>tag</p>
+            {% comment %} {{product.tags}} {% endcomment %} 
+          </div>
+        </a>  
+      </div>
+      {% endfor %}
+  </div>
+
+  <p class='title--content--2'>최고 평점 5개</p>
+  <div class='owl-carousel hits_owl-carousel owl-theme' >
+    {% for product in hits_products %}
+    <div class='card--border'>
+      <a href="{% url 'products:detail' product.pk %}">
+        <img src="{{product.photo.url}}" class='rounded' style='width: 170px; height: 170px;' alt="img">  
+        <div class='card--name--box'>
+          <strong class='card--name'>{{product.name}}</strong>
+        </div>
+        <div class='card--tag--border'>
+          <p><i class="bi bi-star-fill card--rating__color"></i>{{product.hits}}</p>
+          <p>리뷰 {{product.review_set.count}}</p>
+        </div>
+        <div>
+          <p>tag</p>
+          {% comment %} {{product.tags}} {% endcomment %} 
+        </div>
+      </a>  
+    </div>
+    {% endfor %}
+  </div>
+
+  <p class='title--content--2'>인기순</p>
+    <div class='owl-carousel like_owl-carousel owl-theme' >
+      {% for product in like_products %}
+      <div class='card--border'>
+        <a href="{% url 'products:detail' product.pk %}">
+          <img src="{{product.photo.url}}" class='rounded' style='width: 170px; height: 170px;' alt="img">  
+          <div class='card--name--box'>
+            <strong class='card--name'>{{product.name}}</strong>
+          </div>
+          <div class='card--tag--border'>
+            <p><i class="bi bi-star-fill card--rating__color"></i>{{product.hits}}</p>
+            <p>리뷰 {{product.review_set.count}}</p>
+          </div>
+          <div>
+            <p>tag</p>
+            {% comment %} {{product.tags}} {% endcomment %} 
+          </div>
+        </a>  
+      </div>
+      {% endfor %}
+  </div>
+
+    <p class='title--content'>모든 상품</p>
+      <div class='owl-carousel owl-theme' >
+        {% for product in products %}
+        <div class='card--border'>
+          <a href="{% url 'products:detail' product.pk %}">
+            <img src="{{product.photo.url}}" class='rounded' style='width: 170px; height: 170px;' alt="img">  
+            <div class='card--name--box'>
+              <strong class='card--name'>{{product.name}}</strong>
+            </div>
+            <div class='card--tag--border'>
+              <p><i class="bi bi-star-fill card--rating__color"></i>{{product.hits}}</p>
+              <p>리뷰 {{product.review_set.count}}</p>
+            </div>
+            <div>
+              <p>tag</p>
+              {% comment %} {{product.tags}} {% endcomment %} 
+            </div>
+          </a>  
+        </div>
+        {% endfor %}
+    </div>
+
+
+
+</div>
+{% block script %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+<script src="{% static 'js/products_index.js' %}"></script>
+{% endblock script %}
+
 {% endblock content %}
