--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,13 @@
 body{
   font-family: 'NanumSquareNeo-Variable';
-  /* height: 100%; */
+  height: 100%;
   }
+
+#wrapper{
+  height: auto;
+  min-height: calc(100vh - 350px);
+  
+}
 
 a {
   text-decoration: none;
@@ -19,10 +25,12 @@ nav{
   border-bottom: 1px solid var(--subtle-color);
   margin-top: 0;
   background-color: white;
+  z-index: 100;
 }
 
 footer {
   width: 100%;
+  height: 192px;
   background: var(--secondary-color);
 
 }
@@ -131,4 +139,3 @@ footer {
   font-weight: normal;
   font-style: normal;
 }
-  
