추가-products_index

--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block link %}
+  <link rel="stylesheet" href="{% static 'css/button.css' %}">
+{% endblock link %}
 {% block content %}
 <div class="container-fluid">
     <div class="container" style="width: 500px;">
@@ -12,7 +15,7 @@
             {{ field }}
           </div>
         {% endfor %}
-        <input type="submit" class="btn btn-orange w-100 mt-5 mb-3 fs-3" value="비밀번호 변경">
+        <input type="submit" class="button--color rounded w-100 mt-5 mb-3 fs-3" value="비밀번호 변경">
       </form>
     </div>
   </div>
