--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block link %}
+  <link rel="stylesheet" href="{% static 'css/button.css' %}">
+{% endblock link %}
 {% block content %}
 <div class="container-fluid">
     <div class="container" style="width: 500px;">
@@ -12,7 +15,7 @@
             {{ field }}
           </div>
           {% endfor %}
-          <input type="submit" class="btn btn-primary w-100 mt-3 fs-3" value="회원가입">
+          <input type="submit" class="button--color rounded w-100 mt-3 fs-3" value="회원가입">
         </form>
     </div>
   </div>
