--- a/recipes/templates/recipes/detail.html
+++ b/recipes/templates/recipes/detail.html
@@ -64,28 +64,25 @@
   <p class="recipe__comment__info">댓글 <span class="recipe__comment__info--figure">{{ recipe.comment_set.count }}</span></p>
 </div>
 {% comment %} 댓글 작성란 {% endcomment %}
-{% comment %} 현재 기능 미구현 이미지 첨부 고려 x 상태 {% endcomment %}
-
-<form class="recipe__comment__form" action="{% url 'recipes:comment_create' recipe.pk %}" method="post" enctype="multipart/form-data">
+<form class="recipe__comment__input-area" action="{% url 'recipes:comment_create' recipe.pk %}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
-  {{ comment_form.as_p }}
-  {{ comment_image_form.as_p }}
-  {% comment %} 일단 comment 테스트 하기 위해서 밑은 주석처리 하겠슴다 {% endcomment %}
-  <!-- <div class="recipe__comment__user__image">
-    {% if request.user.image %}
-    <img class="recipe__user__image" src="{{ request.user.image}}" alt="{{ request.user.username }}의 프로필 이미지">
-    {% else %}
-    <img class="recipe__user__image" src="{% static 'image/no_image432.png' %}" alt="유저 프로필 사진 없음">
-    {% endif %}
+  <div class="recipe__comment__input-area__input--text">
+    {{ comment_form.content }}
   </div>
-  <div class="recipe__comment__input-area">
-    <input class="recipe__comment__input-area__input--text"type="text" placeholder="칭찬과 격려의 댓글은 작성자에게 큰 힘이 됩니다 :)">
-    <input class="btn recipe__comment__input-area__input--submit" type="submit" name="" id="" value="제출">
-  </div> -->
-  <button type="submit" class="btn btn-outline-dark">작성하기</button>
+  <div class="recipe__comment__input-area__input--image">
+    <label for="input-commentimage">
+      <i class="bi bi-camera-fill"></i>
+    </label>
+    {{ comment_image_form.image }}
+  </div>
+  <input class="recipe__comment__input-area__input--submit" type="submit" value="작성">
 </form>
+    {% comment %} 여 {% endcomment %}
+    {% comment %} 기 {% endcomment %}
+    {% comment %} 까 {% endcomment %}
+    {% comment %} 지 {% endcomment %}
 {% comment %} 댓글 표시 {% endcomment %}
-<div class="recipe__comment__list">
+<div class="recipe__comment__list" id="comment-start">
   {% for comment in comments %}
   <div class="recipe__comment__item">
     <div class="recipe__user__image__container">
@@ -99,7 +96,7 @@
     {% comment %} comment 삭제 구현 완료 {% endcomment %}
     <form action="{% url 'recipes:comment_delete' recipe.pk comment.pk %}" method='POST'>
       {% csrf_token %}
-      <p>리뷰 내용 : {{comment.content}}</p>
+      <p>리뷰 내용 : {{ comment.content }}</p>
       {% for comment_img in comment.commentimage_set.all %}
         {% if comment_img.image %}
           <img src="{{ comment_img.image.url }}" alt="">
@@ -123,11 +120,6 @@
       {{ comment_image_form.as_p }}
       <input type="submit" value="수정">
     </form>
-
-    {% comment %} 여 {% endcomment %}
-    {% comment %} 기 {% endcomment %}
-    {% comment %} 까 {% endcomment %}
-    {% comment %} 지 {% endcomment %}
     <div>
       <p>{{ comment.user.username }}</p>
       <p>{{ comment.user.content }}</p>
