--- a/static/css/recipes_detail.css
+++ b/static/css/recipes_detail.css
@@ -120,6 +120,15 @@
 }
 
 .recipe__comment__input-area__input--text{
+  min-width: 100px;
+  flex: 1 0 0%;
+  min-height: 24px;
+  margin: 9px 0px;
+}
+
+.recipe__comment__input-area--form {
+  margin: 0 5px 0 5px;
+  width: 100%;
   border: none;
   outline: none;
   word-break: break-word;
@@ -127,10 +136,29 @@
   cursor: text;
   font-size: 16px;
   line-height: 24px;
-  min-width: 100px;
-  flex: 1 0 0%;
-  min-height: 24px;
-  margin: 9px 0px;
+}
+
+.recipe__comment__input-area__input--image {
+  width: 30px;
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+  margin: 0 5px;
+}
+
+.recipe__comment__input-area__input--image > label {
+  display: flex;
+  align-items: center;
+}
+
+.recipe__comment__input-area__input--image > label > i:hover {
+  color: var(--main-color)
+}
+
+.recipe__comment__input-area__input--submit {
+  border: none;
+  background-color: rgba(0,0,0,0);
+  font-weight: bold;
 }
 
 .recipe__comment__input-area__input--submit:hover{
